# Final_OOP

./: CMakeLists.txt  README.md  main.cpp
GUI/FirstMenu/: FirstMenu.cpp  FirstMenu.h  Functionalities.cpp  Functionalities.h
GUI/SecondMenu/: SecondMenu.cpp  SecondMenu.h
data/: database.txt  watchlist.html  watchlists.html
domain/: domain.h
repository/: database_file_repository.h  database_repository.cpp  database_repository.h  html_repository.cpp  html_repository.h  watchlist_repository.cpp
service/: database_service.cpp  database_service.h
tests/: tests.cpp
untitled2412/GUI/GuiFunctions/: GuiFunctions.cpp  GuiFunctions.h
untitled2412/GUI/Third_Menu/: ThirdMenu.cpp  ThirdMenu.h
untitled2412/data/: watchlist.csv
untitled2412/repository/: database_file_repository.cpp  watchlist_file_repository.cpp  watchlist_file_repository.h  watchlist_repository.h
untitled2412/service/: watchlist_service.cpp  watchlist_service.h
untitled2412/ui/: ui.cpp  ui.h
untitled2412/validator/: domain_validator.cpp  repository_validator.cpp  repository_validator.h
validator/: domain_validator.h  file_validator.cpp  file_validator.h
